--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@ data/archive/Variant V.csv
 compute_spec.sh 
 # Dont want to upload virtual environment
 ./venv
-
+# Dont want to upload data
+/data
